[package]
name = "oprollups"
version = "0.1.0"
authors = ["Roger Coll <roger.coll@capside.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merkletree = "0.21.0"
rust-crypto = "0.2.36"
blake3 = "0.3.7"
hex = "0.4.2"
bn = "0.4.3"
rand = "~0.3.14"
rustc-serialize = "~0.3.19"
bls-signatures-rs = "0.1.0"
